--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style></style>
+    <style>
+        #box{
+            width: 200px;
+        }
+    </style>
 </head>
 <body>
     <div id="box" class="pox" title="标题" data-msg-id="xx"></div>
