--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         #box{
             width: 200px;
             height: 200px;
+            background: red;
         }
     </style>
 </head>
